--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8" />
-    <title>title</title>
+    <title>Franska Bulldoggs</title>
     <style>
         body {
             font-family: sans-serif;
-            width: 500px;
+            width: 600px;
             margin:auto;
             background-color: lightcyan;
         }
@@ -16,13 +16,16 @@
 <body>
     <h1>Fransk Bulldogg</h1>
     <p>Franska bulldoggs är en hundras som, trots namnet tros härstämmas
-       från England och den engelska bulldogen. I en undersökning i 2012/2013 utnämndes franska bulldoggs
-       som en av världens tjugo populäraste hundraser. Inom Sverige har franska bulldoggs smeknamnet "fralla"
-       och inom engelsktalande länder "frenchie".</p>
-       <img src="images/250px-Bou.jpg">
-    <p>Franska bulldoggs är trevliga, humoristiska, aktiva och utvecklar ofta stora personligheter.</p>
+       från England och den engelska bulldogen. En fransk bulldogg är lätt att känna igen på dess stora
+       fladdermusöron. Den lilla hunden har ett platt ansikte och en kort, glansig päls som är tigrerad,
+       skäck eller sandfärgad. En fullvuxen fralla är 27–34,5 cm i mankhöjd och väger 11–12,5 kg.</p>
+       <img src="images/250px-Bou.jpg" alt="Bild av fransk bulldogg">
+    <p>Franska bulldoggs är trevliga, humoristiska, aktiva och utvecklar ofta stora personligheter.
+       I en undersökning i 2012/2013 utnämndes franska bulldoggs som en av världens tjugo populäraste
+       hundraser. Inom Sverige har franska bulldoggs smeknamnet "fralla" och inom engelsktalande länder
+       "frenchie".</p>
+    <h3>Om du vill adoptera en så kan du klicka länken nedan för mer info.</h3>
        <a href="script\sida1.html">
-       <abbr title="info om annan del av webbsida">blå text</abbr></a>
-       <p> </p>
+       <abbr title="Info om adoptering av en fransk bulldogg">Adoptera En Fransk Bulldogg</abbr></a>
 </body>
 </html>
