--- a/script/sida1.html
+++ b/script/sida1.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: sans-serif;
-            width: 500px;
+            width: 600px;
             margin:auto;
             background-color: lightcyan;
         }
@@ -15,11 +15,11 @@
 </head>
 <body>
     <h1>Adoption av Fransk Bulldogg</h1>
-    <p>a</p>
+    <p>aa</p>
     <p>text om en annan del av webbsidan</p>
        <a href="script\sida1.html">
        <abbr title="info om annan del av webbsida">blå text</abbr></a>
        <p> </p>
-       <img src="images/hej.png">
+       <img src="a">
 </body>
 </html>
