--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8" />
-    <title>Franska Bulldoggs</title>
+    <title>Adoptionscentrum för hundar</title>
     <style>
         body {
             font-family: sans-serif;
