--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        hundraser. Inom Sverige har franska bulldoggs smeknamnet "fralla" och inom engelsktalande länder
        "frenchie".</p>
     <h3>Om du vill adoptera en så kan du klicka länken nedan för mer info.</h3>
-       <a href="script\sida1.html">
+       <a href="sida1.html">
        <abbr title="Info om adoptering av en fransk bulldogg">Adoptera En Fransk Bulldogg</abbr></a>
 </body>
 </html>
