--- a/sida1.html
+++ b/sida1.html
@@ -17,9 +17,9 @@
     <h1>Adoption av Fransk Bulldogg</h1>
     <p>aa</p>
     <p>text om en annan del av webbsidan</p>
-       <a href="script\sida1.html">
+       <a href="test.com">
        <abbr title="info om annan del av webbsida">blå text</abbr></a>
        <p> </p>
-       <img src="a">
+       <img src="images/valp-jul.jpg" alt="Bild av fransk bulldogg" width="250" height="188">
 </body>
 </html>
