--- a/sida1.html
+++ b/sida1.html
@@ -3,7 +3,7 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8" />
-    <title>title</title>
+    <title>Adoptionscentrum för hundar</title>
     <style>
         body {
             font-family: sans-serif;
@@ -15,11 +15,12 @@
 </head>
 <body>
     <h1>Adoption av Fransk Bulldogg</h1>
-    <p>aa</p>
+    <p>Är en fransk bulldogg den rätta hundrasen för dig? Här är lite information om franska bulldoggs
+       du borde fundera över innan du adopterar en fransk bulldogg från en av våra adoptioncentrum.</p>
+    <img src="images/valp-jul.jpg" alt="Bild av fransk bulldogg" width="250" height="188">
     <p>text om en annan del av webbsidan</p>
-       <a href="test.com">
+       <a href="test.com">epic gamer moment</a>
        <abbr title="info om annan del av webbsida">blå text</abbr></a>
        <p> </p>
-       <img src="images/valp-jul.jpg" alt="Bild av fransk bulldogg" width="250" height="188">
 </body>
 </html>
