--- a/sida1.html
+++ b/sida1.html
@@ -19,8 +19,8 @@
        du borde fundera över innan du adopterar en fransk bulldogg från en av våra adoptioncentrum.</p>
     <img src="images/valp-jul.jpg" alt="Bild av fransk bulldogg" width="250" height="188">
     <p>text om en annan del av webbsidan</p>
-       <a href="test.com">epic gamer moment</a>
-       <abbr title="info om annan del av webbsida">blå text</abbr></a>
-       <p> </p>
+       <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>
+       <h2>Återvänd till startsidan med länken nedan.</h2>
+       <a href="/index.html">Återvänd till startsidan!</a>
 </body>
 </html>
