--- a/index.html
+++ b/index.html
@@ -27,5 +27,8 @@
     <h3>Om du vill adoptera en så kan du klicka länken nedan för mer info.</h3>
        <a href="sida1.html">
        <abbr title="Info om adoptering av en fransk bulldogg">Adoptera En Fransk Bulldogg</abbr></a>
+    <h3>Mer info om vår adoptionscentrum hittar du i länken nedan.</h3>
+       <a href="om-oss.html">
+       <abbr title="Info om vår adoptionscentrum">Om oss</abbr></a>
 </body>
 </html>
