--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             background-color: lightcyan;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Fransk Bulldogg</h1>
