--- a/om-oss.html
+++ b/om-oss.html
@@ -3,7 +3,7 @@
 <head>
     <link href="style.css" rel="stylesheet" type="text/css">
     <meta charset="utf-8" />
-    <title>Om oss</title>
+    <title>Adoptionscentrum för hundar</title>
     <style>
         body {
             font-family: sans-serif;
@@ -12,14 +12,17 @@
             background-color: lightcyan;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Rubrik</h1>
-    <p>Paragraf</p>
-    <p>text om en annan del av webbsidan</p>
-       <a href="script\sida1.html">
-       <abbr title="info om annan del av webbsida">blå text</abbr></a>
-       <p> </p>
-       <img src="images/hej.png">
+    <h1>Om oss</h1>
+    <img src="images/franskbulldoggnfokus.jpg" alt="Bild av 3 franska bulldoggs" width="300" height="188">
+    <p>Vi är ett lokalt idell adoptionscentrum för hundar. Vi har 3 adoptionscentrum i 3 olika städer,
+       Malmö, Göteborg och Lund. Majoriteten av vår inkomst är från donationer. Om du vill donare kan du
+       göra den genom Swish till numret 500-473-294.
+    </p>
+    <h3>Återvänd till startsidan genom länken nedan.</h3>
+       <a href="index.html">
+       <abbr title="Återvänd till startsidan">Återvänd till startsidan</abbr></a>
 </body>
 </html>
