--- a/sida1.html
+++ b/sida1.html
@@ -12,6 +12,7 @@
             background-color: lightcyan;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Adoption av Fransk Bulldogg</h1>
@@ -19,12 +20,12 @@
        du borde fundera över innan du adopterar en fransk bulldogg från en av våra adoptioncentrum.</p>
     <img src="images/valp-jul.jpg" alt="Bild av fransk bulldogg" width="250" height="188">
     <p>Franska bulldoggs passar ägare utan erfaranhet men det betyder inte att dem är enkla att ta hand om.
-       De kräver grundläggande träning och pälsvård 1 gång i veckan. Dem kan även behöva träing för
+       De kräver grundläggande träning och pälsvård 1 gång i veckan. Dem kan även behöva träning för
        för att bo med barn, katter eller andra hundar. Franska bulldoggs är inte allergivänliga.
        Franska bulldoggs är vakthundar, de skäller och varnar men förrutom det är dem tysta.
        Franska bulldoggs är lugna och kräver därför mindre motion och går på lugnare promenader.</p>
-       <h3>Det som står på vår webbsida är en en sammanfattning av info på nätet. Klicka på länken
-           nedan för mer info om franska bulldoggs.</h3>
+       <p><strong>Det som står på vår webbsida är en en sammanfattning av info på nätet. Klicka på länken
+           nedan för mer info om franska bulldoggs.</strong></p>
        <a href="https://www.purina.se/hundar/ras/hund/fransk-bulldogg">Mer info om franska bulldoggs på purina.se</a>
        <h3>Återvänd till startsidan med länken nedan.</h3>
        <a href="index.html">Återvänd till startsidan!</a>
