--- a/om-oss.html
+++ b/om-oss.html
@@ -18,7 +18,7 @@
     <h1>Om oss</h1>
     <img src="images/franskbulldoggnfokus.jpg" alt="Bild av 3 franska bulldoggs" width="300" height="188">
     <p>Vi är ett lokalt idell adoptionscentrum för hundar. Vi har 3 adoptionscentrum i 3 olika städer,
-       Malmö, Göteborg och Lund. Majoriteten av vår inkomst är från donationer. Om du vill donare kan du
+       Malmö, Göteborg och Lund. Majoriteten av vår inkomst är från donationer. Om du vill donera kan du
        göra den genom Swish till numret 500-473-294.
     </p>
     <h3>Återvänd till startsidan genom länken nedan.</h3>
