--- a/sida1.html
+++ b/sida1.html
@@ -26,10 +26,12 @@
        Franska bulldoggs är lugna och kräver därför mindre motion och går på lugnare promenader.</p>
        <p><strong>Det som står på vår webbsida är en en sammanfattning av info på nätet. Klicka på länken
            nedan för mer info om franska bulldoggs.</strong></p>
-       <a href="https://www.purina.se/hundar/ras/hund/fransk-bulldogg">Mer info om franska bulldoggs på purina.se</a>
+       <a href="https://www.purina.se/hundar/ras/hund/fransk-bulldogg">
+       <abbr title="Mer info om franska bulldoggs på purina.se">Mer info om franska bulldoggs på purina.se</abbr></a>
        <p><strong>Här är även en video av någon som äger en fransk bulldogg som pratar om sina upplevelser</strong></p>
        <iframe width="560" height="315" src="https://www.youtube.com/embed/77IC1omLe94" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        <h3>Återvänd till startsidan med länken nedan.</h3>
-       <a href="index.html">Återvänd till startsidan!</a>
+       <a href="index.html">
+       <abbr title="Återvänd till startsidan">Återvänd till startsidan!</abbr></a>
 </body>
 </html>
